--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "sass": "^1.56.2",
     "vite": "^3.2.4"
